Fix alignment problem

--- a/_static/dv.css
+++ b/_static/dv.css
@@ -289,18 +289,14 @@ div.document ol {
 }
 
 div.showterm {
-    display: block;
-    height: 290px;
+  align: left;
+  margin: 0;
 }
 
 div.showterm iframe {
-    float: left; 
-    -webkit-transform: scale(.90);
-    -ms-transform: scale(.90);
-    -moz-transform: scale(.90);
-    -webkit-transform-origin: 100% 0;
-    -ms-transform-origin: 100% 0;
-    -moz-transform-origin: 100% 0;
+  scrolling: yes;
+  height: 320px;
+  width: 640px;
 }
 
 
